--- a/Pipfile
+++ b/Pipfile
@@ -3,11 +3,15 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[scripts]
+build = "python setup.py sdist && python setup.py bdist_wheel"
+
 [dev-packages]
 mypy = "*"
 autopep8 = "*"
 
 [packages]
+wrapt = "*"
 
 [requires]
 python_version = "3.8"
