--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [scripts]
-build = "python setup.py sdist && python setup.py bdist_wheel"
+sdist = "python setup.py sdist"
+bdist_wheel = "python setup.py bdist_wheel"
 
 [dev-packages]
 mypy = "*"
