--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,8 @@ verify_ssl = true
 
 [scripts]
 build = "python setup.py sdist bdist_wheel"
-upload = "python -m twine upload dist/*"
+upload_testpypi = "python -m twine upload --repository testpypi dist/*"
+upload_pypi = "python -m twine upload dist/*"
 
 [dev-packages]
 autopep8 = "*"
