--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,5 +27,6 @@
     "extensions": [
         "ms-python.python"
     ],
+    "postCreateCommand": "pipenv install --dev",
     "remoteUser": "vscode"
 }
