--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,7 @@
         "dockerfile": "Dockerfile",
         "context": "..",
         "args": {
-            "VARIANT": "3.8",
-            "INSTALL_NODE": "false",
-            "NODE_VERSION": "lts/*"
+            "VARIANT": "3.8"
         }
     },
     "settings": {
