--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -24,3 +24,8 @@ jobs:
     - uses: ricardochaves/python-lint@v1.4.0
       with:
         use-mypy: true
+        use-isort: true
+        use-pylint: false
+        use-pycodestyle: false
+        use-flake8: false
+        use-black: false
